# master115

./: .gitignore  README.md  compile.ps1  findversion.py  main.py  master115.spec  pyproject.toml  run.py  wallet.py
.cursor/rules/: logic-models-file-rules.mdc
Master115Docs/: 115 Download Endpoint.md  115 Download Hypothesis.md  115 Folder Download Process.md  115 Folder Retrieval.md  Browser Code Detection Technique.md  Face State Worker.md  Face Swap Automation.md  Face Swap Reports.md  Master115 Documentation.md  Multithreading Notes.md  PersonBadge Documentation.md  Removing PendingReview Json.md  music_player_config.yaml  qt_base_app Documentation.md
Master115Docs/.obsidian/: workspace.json
download_api/: captain.america.brave.new.world.2025.proper.1080p.web.h264-ethel.nfo
master115/models/: chrome115_browser.py  chrome_tab.py  face_state_worker.py  face_swap_models.py  face_swap_worker.py  faceswap_manager.py  people_manager.py  review_manager.py  webdriver_utils.py
master115/resources/: master115_config.yaml
master115/ui/: main_window.py
page_repo/: Already_Logged_on.html  iframe_content_20250418_200014.html  pixnova_result_page_20250422_070546.html  pixnova_result_page_20250422_071807.html
page_repo/old/: AI_Face_Swap_for_Photos__GIFs_and_Videos__free__no_sign-up__20250421_224806.html  CloudFlare Element.html  Not_Logged_on.html  api_response_root_20250419_131250.json  api_response_root_20250419_132601.json  downloads_page_20250419_134156.html  iframe_content_20250418_184245.html  (+2 more)
qt_base_app/: app.py
testcode/: download_first_115_item.py
(+25 files in other folders)
